k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tictactoe
spec:
  selector:
    app: tictactoe
  ports:
  - port: 80
    targetPort: 8080
